JavaScript_Assignment/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ContactIDs__c</fullName>
        <label>ContactIDs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Credit_Card_Number__c</fullName>
        <label>Credit Card Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Match_Billing_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Match Billing Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mix_Pct__c</fullName>
        <label>Mix Pct</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Multiple_Of_Five__c</fullName>
        <label>Multiple Of Five</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Potential_Value__c</fullName>
        <label>Potential Value</label>
        <summarizedField>Opportunity.ExpectedRevenue</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>date</label>
        <type>Date</type>
    </fields>
    <validationRules>
        <fullName>Credit_Card_Number_format</fullName>
        <active>true</active>
        <errorConditionFormula>And( NOT( ISBLANK( Credit_Card_Number__c ) ) ,
NOT(REGEX(Credit_Card_Number__c ,&quot;(((\\d{4}-){3}\\d{4})|\\d{16})?&quot;)))</errorConditionFormula>
        <errorMessage>Credit_Card_Number should be formatted in 9999-9999-9999-9999 or 9999999999999999 number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_Weeked_validation</fullName>
        <active>true</active>
        <errorConditionFormula>CASE(MOD(  date__c  - DATE(1900, 1, 7), 7), 0, 0, 6, 0, 1)=0</errorConditionFormula>
        <errorMessage>date should  weekday</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Multiple_of_five_validation</fullName>
        <active>true</active>
        <errorConditionFormula>IF( (MOD( Multiple_Of_Five__c ,5)!=0) , True, false)</errorConditionFormula>
        <errorMessage>Enter a value multiple of five</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Neumeric_Account_Number</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  NOT(ISBLANK( AccountNumber)),
  NOT ( ISNUMBER( AccountNumber ))
)</errorConditionFormula>
        <errorMessage>Account Number Should numeric if not blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Mix_Pct__c  &lt;0.0 ,Mix_Pct__c  &gt;1.0 )</errorConditionFormula>
        <errorMessage>Enter a value  between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Postal_Code_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 OR(BillingCountry =&quot;USA&quot;,BillingCountry =&quot;US&quot;) ,
  NOT(REGEX( BillingPostalCode ,&quot;\\d{5}(-\\d{4})?&quot;))   
)</errorConditionFormula>
        <errorMessage>Account Billing Zip/Postal Code Should be  in 99999 or 99999-9999 format if Billing Country is USA or US</errorMessage>
    </validationRules>
</CustomObject>